hsmc-macros/tests/ui/t9_6_empty_state.stderr
error: empty state `Empty`
  --> tests/ui/t9_6_empty_state.rs:14:11
   |
14 |     state Empty {}
   |           ^^^^^

error[E0405]: cannot find trait `MActions` in this scope
  --> tests/ui/t9_6_empty_state.rs:18:6
   |
18 | impl MActions for MActionContext<'_> {
   |      ^^^^^^^^ not found in this scope

error[E0425]: cannot find type `MActionContext` in this scope
  --> tests/ui/t9_6_empty_state.rs:18:19
   |
18 | impl MActions for MActionContext<'_> {
   |                   ^^^^^^^^^^^^^^ not found in this scope
